Sun Sep 13 22:02:22 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/examples/LoggingClient.xme:

          . Example illustrating how to integrate the logging client into
            a CUTS behavior/workload model. This example only illustrates
            the Java version.

        * MDE/GME/paradigms/PICML/models/workers/logging.xme:
        * MDE/GME/paradigms/PICML/models/workers/testing.xme:

          . Updated the models.

        * cuts/java/utils/logging/client/logger/CUTS/client/logging/Logger.java:

          . Implemented another connect () method where you can specify
            what test to associate the logger with at connection time.

        * cuts/java/utils/testing/CUTS:
        * cuts/java/utils/testing/CUTS/client:
        * cuts/java/utils/testing/CUTS/client/TestManagerClient.java:
        * cuts/java/utils/testing/testing.build:

          . Helper class to simplify working with the test manager
            and CORBA.

Sun Sep 13 21:10:27 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/models/examples:

          Removed this file.

Sun Sep 13 21:08:40 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/examples/capi:

          . Relocated the examples.

        * MDE/GME/paradigms/PICML/models/examples/capi:
        * MDE/GME/paradigms/PICML/models/examples/capi/AnyEvent.xme:

          Removed these files.

Sun Sep 13 21:02:03 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/models/workers/logging.xme:
        * MDE/GME/paradigms/PICML/models/workers/testing.xme:

          . Models for including respective objects in generated
            code.

        * MDE/GME/paradigms/PICML/models/workers/TestLogger.xme:

          Removed this file.

Sun Sep 13 20:46:44 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/java/utils/logging/client/logger/logger.build:
