@@ -59,6 +59,10 @@ project (CUTS_OpenSplice_CCM) : cuts_ccm, cuts_opensplice_ccm_skel, cuts_lib, cu
   sharedname    = CUTS_OpenSplice_CCM
   dynamicflags += CUTS_OPENSPLICE_CCM_BUILD_DLL
 
+  specific (prop:microsoft) {
+    link_options += /FORCE:MULTIPLE
+  }
+
   Source_Files {
     OpenSplice_EventConsumer.cpp
     OpenSplice_CCM_Servant.cpp
