@@ -3,10 +3,10 @@
 #ifndef _CUTS_OPENSPLICE_CCM_EVENTCONSUMER_H_
 #define _CUTS_OPENSPLICE_CCM_EVENTCONSUMER_H_
 
+#include "OpenSplice_EventsS.h"
 #include "cuts/arch/ccm/CCM_EventConsumer.h"
 #include "cuts/arch/opensplice/OpenSplice_ListenerBase.h"
 #include "cuts/arch/opensplice/OpenSplice_Endpoint.h"
-#include "OpenSplice_EventsS.h"
 #include "OpenSplice_CCM_export.h"
 
 /**
@@ -28,12 +28,12 @@ class CUTS_OPENSPLICE_CCM_Export CUTS_OpenSplice_CCM_EventConsumer :
   virtual ~CUTS_OpenSplice_CCM_EventConsumer (void);
 
   virtual int configure (::DDS::DomainParticipant_ptr participant,
-			 const char * inst,
-			 const char * topic_name) = 0;
+       const char * inst,
+       const char * topic_name) = 0;
 
   virtual int open (::DDS::DomainParticipant_ptr participant,
-		    ::DDS::TypeSupport_ptr type_support,
-		    const char * topic_name);
+        ::DDS::TypeSupport_ptr type_support,
+        const char * topic_name);
 
   /// Close the event consumer.
   virtual int close (void);
@@ -42,11 +42,11 @@ class CUTS_OPENSPLICE_CCM_Export CUTS_OpenSplice_CCM_EventConsumer :
   virtual ::Components::OpenSplice::TopicDescription * topic_description (void);
 
  protected:
-  /// Right now, we assume that each consumer is a subscriber. In the 
+  /// Right now, we assume that each consumer is a subscriber. In the
   /// future, we may want to enable shared subscriptions between consumers.
   ::DDS::Subscriber_var subscriber_;
 
-  /// The abstract reader for the event consumer. 
+  /// The abstract reader for the event consumer.
   ::DDS::DataReader_var abstract_reader_;
 };
 
